--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -6,6 +6,14 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      -  
+       name: Docker meta
+       id: meta
+       uses: docker/metadata-action@v4
+       with: 
+          images: |
+             cobraking1/repo4cobra
+       
 
       -
         name: Login to Docker Hub
