--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -35,6 +35,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
+          file: .github/workflows/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/repo4cobra:latest
