--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -33,6 +33,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Project-4and5/website/Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/repo4cobra:latest
