--- a/.github/workflows/Project5_workflow.yml
+++ b/.github/workflows/Project5_workflow.yml
@@ -2,9 +2,14 @@ name: Project 5 Workflow
 
 on:
   push:
+    branches:
+      - 'main'
     tags:
      -"v*.*.*"
-  branch:
+  pull_request:
+    branches:
+      - 'main'
+  
   workflow_dispatch:
   
 
