--- a/.github/workflows/Project5_workflow.yml
+++ b/.github/workflows/Project5_workflow.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       -
         name: List contents
-        uses: actions/checkout@v3
+        uses: ls
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
