--- a/.github/workflows/Project5_workflow.yml
+++ b/.github/workflows/Project5_workflow.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
       -
         name: List contents
-        uses: ls
+        run: ls
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
