--- a/deployment/webhook.conf
+++ b/deployment/webhook.conf
@@ -1,6 +1,19 @@
 [
   {
     "id": "webhook",
-    "execute-command": "/home/ubuntu/pull_restart.sh"
+    "execute-command": "/home/ubuntu/pull_restart.sh",
+    "trigger-rule":
+    {
+       "match":
+       {
+         "type":"payload-hash-shal",
+         "secret": "mysecret",
+         "parameter":
+         {
+           "source": "header",
+           "name": "X-Hub-Signature"
+         }
+       }
+    }
   }
 ]
